Bug Fixes - Fixed incorrect quesiton image size on mobile - Fixed a bug that if one player tries to matchmake twice from the same account, he will play against 'himself'

--- a/Styling/SCSS/loggedIn.scss
+++ b/Styling/SCSS/loggedIn.scss
@@ -71,6 +71,7 @@ nav {
             img {
                 max-height: 370px;
                 width: auto;
+                max-width: 100%;
                 display: block;
                 margin: 10px auto 0 auto;
 
